--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "jsonwebtoken": "^9.0.3",
-    "mongodb": "^6.21.0"
+    "mongodb": "^6.21.0",
+    "qrcode": "^1.5.4"
   }
 }
