--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.159",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "sst": "^3.17.24",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.943.0",
     "@types/jsonwebtoken": "^9.0.10",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.21.0",
+    "nodemailer": "^7.0.11",
     "qrcode": "^1.5.4"
   }
 }
