--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/aws-lambda": "^8.10.159",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.4",
+    "@types/qrcode": "^1.5.6",
     "sst": "^3.17.24",
     "typescript": "^5.9.3"
   },
