--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.159",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.4",
     "@types/qrcode": "^1.5.6",
-    "sst": "^3.17.24",
+    "sst": "^3.9.28",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@aws-sdk/client-apigatewaymanagementapi": "^3.948.0",
     "@aws-sdk/client-ses": "^3.943.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.21.0",
     "nodemailer": "^7.0.11",
